  events.

  Fix HTTPPlugin TCPProxy filter to remove extraneous quote from
  reference to POST data files. Thanks to Saurabh Sehgal for the
  report.

  Relax cookie parsing to cope with .NET nonsense. Requested and
  prototyped by John S. White.

  Fulfil Feature Request 1482811 - slow socket connections. Requested
  by Travis Bear. See HTTPPluginConnection.setBandwidthLimit().


The Grinder 3.0-beta30
----------------------

  Fix HTTPlugin TCPProxy filter so that scripts send the real token
  name back to the server, not the token id. Thanks to VmasterZen for
  reporting this.

  Changes to the script statistics API:

    Scripts now refer to statistics by name rather than indicies. This
    means they don't need to use StatisticsIndexMap. This addresses an
    issue with scripts being unable to access StatisticsIndexMap -
    thanks to Stefan Grinsted for the report.

    The ScriptContext registerSummaryStatisticsView() and
    registerDetailStatisticsView() methods have been replaced with
    Statistics.registerSummaryExpression() and
    Statistics.registerDataLogExpression(). The new methods use
    expression strings, rather than requiring the use StatisticsView
    and ExpressionView objects.

    The scripts no longer need objects from the net.grinder.statistics
    package; consequently that package has been removed from the
    statistics API.

  Fix scripts statistics so the query methods work outside of an open
  test dispatch context; they return values for the last test reported
  by the worker thread. This was broken by the support for nested
  tests introduced in the last beta.

  The grinder.recordTime property has been replaced by a new
  grinder.reportTimesToConsole property. Test times are now always
  recorded in the worker process data log, irrespective of the value
  of grinder.reportTimesToConsole.


The Grinder 3.0-beta29
----------------------

  Nested Tests are supported. That is, you can now use a Test to